--- a/MPFR.pod
+++ b/MPFR.pod
@@ -237,7 +237,7 @@ Math::MPFR - perl interface to the MPFR (floating point) library.
 
     This will also mean that overloaded operations that receive an
     NV will evaluate that (__float128) NV to its full precision.
-    And assigning the NV as Math::MPFR->new($nv) will also work as
+    And assigning the NV as Math::MPFR->new($NV) will also work as
     intended.
 
     NOTE:
@@ -534,10 +534,10 @@ Math::MPFR - perl interface to the MPFR (floating point) library.
    $si = Rmpfr_set_si($rop, $si, $rnd);
    $si = Rmpfr_set_sj($rop, $sj, $rnd);
    $si = Rmpfr_set_uj($rop, $uj, $rnd);
-   $si = Rmpfr_set_d($rop, $double, $rnd);
+   $si = Rmpfr_set_IV($rop, $IV, $rnd); # $IV is $Config{ivtype}
+   $si = Rmpfr_set_d ($rop, $double, $rnd);
    $si = Rmpfr_set_ld($rop, $ld, $rnd); # long double
-   $si = Rmpfr_set_NV($rop, $nv, $rnd); # double/long double/__float128,
-                                        # depending upon perl's nvtype.
+   $si = Rmpfr_set_NV($rop, $NV, $rnd); # $NV is $Config{nvtype}
    $si = Rmpfr_set_LD($rop, $LD, $rnd); # $LD is a Math::LongDouble object
    $si = Rmpfr_set_z($rop, $z, $rnd); # $z is a mpz object.
    $si = Rmpfr_set_q($rop, $q, $rnd); # $q is a mpq object.
@@ -546,26 +546,20 @@ Math::MPFR - perl interface to the MPFR (floating point) library.
    $si = Rmpfr_set_float128($rop, $f128, $rnd);# nvtype is __float128
                                                # && mpfr-4.0.0 or later
                                                # && mpfr lib built with
-                                               # --enable-float128 &&
-                                               # F128=1 cmd line arg
-                                               # given to Makefile.PL
+                                               # --enable-float128.
    $si = Rmpfr_set_DECIMAL64($rop, $D64, $rnd) # mpfr-3.1.0 or later &&
                                                # mpfr lib built with
                                                # --enable-decimal-float
-                                               # && D64=1 arg given to
-                                               # Makefile.PL. $D64 is a
+                                               # $D64 is a
                                                # Math::Decimal64 object
    $si = Rmpfr_set_DECIMAL128($rop, $D128, $rnd) # mpfr-3.1.0 or later &&
                                                # mpfr lib built with
-                                               # --enable-decimal-float
-                                               # && D128=1 arg given to
-                                               # Makefile.PL. $D128 is a
+                                               # --enable-decimal-float.
+                                               # $D128 is a
                                                # Math::Decimal128 object
    $si = Rmpfr_set_FLOAT128($rop, $F128, $rnd);# mpfr-4.0.0 and later
                                                # && mpfr lib built with
-                                               # --enable-float128 &&
-                                               # F128=1 cmd line arg
-                                               # given to Makefile.PL.
+                                               # --enable-float128.
                                                # $F128 is a
                                                # Math::Float128 object.
     Set the value of $rop from 2nd arg, rounded to the precision of
@@ -827,7 +821,6 @@ Math::MPFR - perl interface to the MPFR (floating point) library.
    $bool = Rmpfr_fits_uintmax_p($op, $rnd); # fits in uintmax_t
    $bool = Rmpfr_fits_intmax_p($op, $rnd);  # fits in intmax_t
    $bool = Rmpfr_fits_IV_p($op, $rnd);      # fits in perl IV
-   $bool = Rmpfr_fits_UV_p($op, $rnd);      # fits in perl UV
     Return non-zero if $op would fit in the respective data
     type, when rounded to an integer in the direction $rnd.
 
@@ -835,11 +828,10 @@ Math::MPFR - perl interface to the MPFR (floating point) library.
    $si = Rmpfr_get_si($op, $rnd);
    $sj = Rmpfr_get_sj($op, $rnd);
    $uj = Rmpfr_get_uj($op, $rnd);
-   $uv = Rmpfr_get_UV($op, $rnd);
-   $iv = Rmpfr_get_IV($op, $rnd);
+   $IV = Rmpfr_get_IV($op, $rnd); # $IV is $Config{ivtype}
     Convert $op to an 'unsigned long long', a 'signed long', a
-    'signed long long', an 'unsigned long long', a 'UV', or an
-    'IV' - after rounding it with respect to $rnd.
+    'signed long long', an 'unsigned long long' or an 'IV' - after
+    rounding it with respect to $rnd.
     If $op is NaN, the result is undefined. If $op is too big
     for the return type, it returns the maximum or the minimum
     of the corresponding C type, depending on the direction of
@@ -853,7 +845,7 @@ Math::MPFR - perl interface to the MPFR (floating point) library.
                                            # --enable-float128 &&
                                            # F128=1 cmd line arg
                                            # given to Makefile.PL
-   $nv     = Rmpfr_get_NV($op, $rnd);    # double/long double/__float128
+   $NV     = Rmpfr_get_NV($op, $rnd);    # double/long double/__float128
    $float  = Rmpfr_get_flt($op, $rnd);   # mpfr-3.0.0 and later
    Rmpfr_get_LD($LD, $op, $rnd);         # $LD is a Math::LongDouble object.
    Rmpfr_get_DECIMAL64($d64, $op, $rnd); # mpfr-3.1.0 or later &&
@@ -1065,8 +1057,8 @@ Math::MPFR - perl interface to the MPFR (floating point) library.
    $si = Rmpfr_ui_pow($rop, $ui,  $op,  $rnd);
    $si = Rmpfr_pow   ($rop, $op1, $op2, $rnd);
    $si = Rmpfr_pow_z ($rop, $op,  $z,   $rnd); # $z is a mpz object
-   $si = Rmpfr_pow_UV($rop, $op,  $uv,  $rnd);
-   $si = Rmpfr_pow_IV($rop, $op,  $iv,  $rnd);
+
+   $si = Rmpfr_pow_IV($rop, $op,  $IV,  $rnd); # $IV is $Config{ivtype}
     Set $rop to 2nd arg raised to 3rd arg, rounded to the direction
     $rnd with the precision of $rop.  Return zero if the result is
     exact, a positive value when the result is greater than 2nd arg
@@ -1136,9 +1128,8 @@ Math::MPFR - perl interface to the MPFR (floating point) library.
    $si = Rmpfr_cmp_z($op, $z); # $z is a mpz object
    $si = Rmpfr_cmp_q($op, $q); # $q is a mpq object
    $si = Rmpfr_cmp_f($op, $f); # $f is a mpf object
-   $si = Rmpfr_cmp_IV($op, $iv);
-   $si = Rmpfr_cmp_UV($op, $uv);
-   $si = Rmpfr_cmp_NV($op, $nv);
+   $si = Rmpfr_cmp_IV($op, $IV); # $IV is $Config{ivtype}
+   $si = Rmpfr_cmp_NV($op, $NV); # $NV is $Config{nvtype}
     Compare 1st and 2nd args. In the case of 'Rmpfr_cmpabs()' and
     'Rmpfr_cmpabs_ui' compare the absolute values of the 2 args.
     Return a positive value if 1st arg > 2nd arg, zero if
@@ -1804,32 +1795,32 @@ Math::MPFR - perl interface to the MPFR (floating point) library.
 
    MISCELLANEOUS
 
-   $str = doubletoa($nv [, $x]); # Available only when
+   $str = doubletoa($double [, $x]); # Available only when
                                  # $Config{nvsize} == 8.
                                  # Else use nvtoa().
-    Sets $str to the value of the double $nv.
+    Sets $str to the value of $double.
     $str will appear in standard decimal format such that the
-    condition ($str == $nv) is true.
+    condition ($str == $double) is true.
     The grisu3 algorithm used by this function, whilst very quick,
     will fail for about 0.5% of values. When this happens doubletoa
     will (by default) fall back to using nvtoa() - which is slower,
     but reliable.
     Alternatively, providing a second argument to doubletoa (any
-    scalar will do) will ensure that sprintf("%.16e", $nv) is
-    returned. This will be an accurate return, and it will be
-    quicker than the nvtoa() fallback, but it often provides more
-    digits than are necessary.
+    scalar will do) will ensure that it falls back to returning
+    sprintf("%.17g", $double).This will be an accurate return, and
+    it will be quicker than the nvtoa() fallback, but it often
+    provides more digits than are necessary.
     Whenever doubletoa reverts to a fallback routine,
     $Math::MPFR::doubletoa_fallback (which is initially set to 0)
     will be incremented. This feature can be disabled by providing
     the FB=0 argument to the 'perl Makefile.PL' step of the
     Math::MPFR build.
 
-   $str = nvtoa($nv); # Available irrespective of $Config{nvsize}
+   $str = nvtoa($NV); # Available irrespective of $Config{nvsize}
                       # and $Config{nvtype}
-    Sets $str to the value of $nv.
+    Sets $str to the value of $NV.
     $str will appear in standard decimal format, containing the
-    *minimum* number of digits such that the condition ($str == $nv)
+    *minimum* number of digits such that the condition ($str == $NV)
     is true.
     NOTE 1: Except for perls whose nvtype is __float128:
              1) perl versions prior to 5.30.0 are buggy in their
@@ -1909,15 +1900,15 @@ Math::MPFR - perl interface to the MPFR (floating point) library.
     output can lose precision as it prints out UVs and IVs in
     floating point format.)
 
-   $nv = atodouble($str); # Needs mpfr-3.1.6 or later
-    Sets the $nv to the value of the double that's represented by
+   $double = atodouble($str); # Needs mpfr-3.1.6 or later
+    Sets $double to the value of the double that's represented by
     the string $str.
     If $Config{nvtype} is double, it therefore returns the same
     value as atonv.
     See atonv() below.
 
-   $nv = atonv($str); # Needs mpfr-3.1.6 or later
-    Sets $nv to the NV value represented by the string $str.
+   $NV = atonv($str); # Needs mpfr-3.1.6 or later
+    Sets $NV to the NV value represented by the string $str.
     If $str expresses a base 2 value, begin it with '0b' or '0B'.
     If $str expresses a base 16 value, begin it with '0x' or '0X.
     For example:
@@ -2139,7 +2130,7 @@ Math::MPFR - perl interface to the MPFR (floating point) library.
     NaN, then $rop is set to the numeric value. If $op1 and
     $op2 are zeros of different signs, then $rop is set to +0.
 
-   $iv = Math::MPFR::nnumflag(); # not exported
+   $IV = Math::MPFR::nnumflag(); # not exported
     Returns the value of the non-numeric flag. This flag is
     initialized to zero, but incemented by 1 whenever the
     a string containing non-numeric characters is passed to an
@@ -2147,7 +2138,7 @@ Math::MPFR - perl interface to the MPFR (floating point) library.
     many times such strings were passed to mpfr functions . The
     flag can be reset to 0 by running clear_nnum().
 
-   $iv = Math::MPFR::nok_pokflag(); # not exported
+   $IV = Math::MPFR::nok_pokflag(); # not exported
     Returns the value of the nok_pok flag. This flag is
     initialized to zero, but incemented by 1 whenever a
     scalar that is both a float (NOK) and string (POK) is passed
@@ -2155,12 +2146,12 @@ Math::MPFR - perl interface to the MPFR (floating point) library.
     therefore tells us how many times such events occurred . The
     flag can be reset to 0 by running clear_nok_pok().
 
-   Math::MPFR::set_nnum($iv); # not exported
+   Math::MPFR::set_nnum($IV); # not exported
     Resets the global non-numeric flag to the value specified by
-    $iv.
+    $IV.
 
-   Math::MPFR::set_nok_pok($iv); # not exported
-    Resets the nok_pok flag to the value specified by $iv.
+   Math::MPFR::set_nok_pok($IV); # not exported
+    Resets the nok_pok flag to the value specified by $IV.
 
    Math::MPFR::clear_nnum(); # not exported
     Resets the global non-numeric flag to 0.(Essentially the same
