--- a/CHANGES
+++ b/CHANGES
@@ -10,7 +10,8 @@
  - Utilize Rmpfr_cmp_IV and Rmpfr_cmp_NV in the overloaded comparison subs.
  - Remove the *_UV functions and adapt the corresponding *_IV functions to handle the case
    that SvUOK() is true. (This is how it should always have been.)
- - Add Rmpfr_init_set_IV and Rmpfr_init_set_NV.
+ - Add Rmpfr_init_set_IV, Rmpfr_init_set_NV and Rmpfr_init_set_float128.
+ - Add Rmpfr_cmp_float128.
  - Allow all Rmpfr_cmp_IV, Rmpfr_set_IV, Rmpfr_init_set_IV, Rmpfr_cmp_NV, Rmpfr_set_NV
    and Rmpfr_init_set_NV to accept scalars that are not IOK or (respectively) NOK.
 
