--- a/CHANGES
+++ b/CHANGES
@@ -12,8 +12,10 @@
    that SvUOK() is true. (This is how it should always have been.)
  - Add Rmpfr_init_set_IV, Rmpfr_init_set_NV and Rmpfr_init_set_float128.
  - Add Rmpfr_cmp_float128.
- - Allow all Rmpfr_cmp_IV, Rmpfr_set_IV, Rmpfr_init_set_IV, Rmpfr_cmp_NV, Rmpfr_set_NV
-   and Rmpfr_init_set_NV to accept scalars that are not IOK or (respectively) NOK.
+ - Rmpfr_cmp_IV, Rmpfr_set_IV, Rmpfr_init_set_IV, Rmpfr_cmp_NV, Rmpfr_set_NV
+   and Rmpfr_init_set_NV accept only scalars that are IOK or (respectively) NOK as their
+   2nd argument.
+ - Add POK_flag(), IOK_flag(), NOK_flag (@EXPORT_OK only)
 
 4.17
  - In Rmpfr_set_default_prec(), Rmpfr_set_prec() and Rmpfr_set_prec_raw(), check
