--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,8 @@
 4.22
+ - Add overloading of '<<' and '>>'. (Left shifts and right shifts don't make a lot of
+   sense in floating-point environments. These overloads simply call mul_2ui or mul_2si
+   or (respectively) div_2ui or div_2si, thereby altering  the value of the exponent,
+   but having no effect on the mantissa.
 
 4.21
  - Fix bug re inconsistent settings of POK and NOK flag, which manifests itself as (eg):
