--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,7 @@
    sense in floating-point environments. These overloads simply call mul_2ui or mul_2si
    or (respectively) div_2ui or div_2si, thereby altering  the value of the exponent,
    but having no effect on the mantissa.
+ - Work around perl bug in https://github.com/Perl/perl5/issues/19550
 
 4.21
  - Fix bug re inconsistent settings of POK and NOK flag, which manifests itself as (eg):
