--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,8 @@
  - Fix bug in overload_spaceship() handling of NaN. If the first arg was non-nan
    and thesecond arg was a Math::MPFR nan object, then the spaceship operator
    returned 0 instead of undef.  (Added a test for this to t/overload.t.)
+ - Fix overload_dec() to handle DEAL_WITH_NANFLAG_BUG_OVERLOADED macro.
+   See https://github.com/sisyphus/math-mpfr/pull/5
 
 4.22
  - Add overloading of '<<' and '>>'. (Left shifts and right shifts don't make a lot of
