--- a/MPFR.pod
+++ b/MPFR.pod
@@ -1869,13 +1869,22 @@ Math::MPFR - perl interface to the MPFR (floating point) library.
             With double-double NVs, nvtoa() currently requires
             mpfr-4.0.0 or later.
 
-   $str = mpfrtoa($op);
+   $str = mpfrtoa($op, $uv); # $uv is optional (new in 4.24), and will
+                             # be set to zero if not provided.
     As for nvtoa(), except that mpfrtoa() instead takes a Math::MPFR
     object as its argument.
     Sets $str to the value of $op.
     $str will appear in standard decimal format, containing the
     *minimum* number of digits such that the condition ($str == $op)
     is true.
+    If provided, $uv sets the minimum precision below which the value
+    will be deemed subnormal. For example, if $uv is given as 53, then
+    any Math::MPFR object ($op) with precision less than 53 bits will
+    be treated as subnormal. (This can have an effect on the no. of
+    significant mantissa digits returned.)
+    If $uv is not provided, it is assigned a value of 0 - ie no
+    Math::MPFR objects will be treated as subnormal (because
+    precision is never less than 0).
 
    $str = anytoa($op [, $bits]);
     For example, you want to know what nvtoa(sqrt 3) would return
@@ -2415,7 +2424,7 @@ Math::MPFR - perl interface to the MPFR (floating point) library.
      < <= > >= == != <=>
      ! bool
      abs atan2 cos sin log exp (Return object has default precision)
-     int (On perl 5.8 only, NA on perl 5.6. The return object
+     int (On perl 5.8+ only, NA on perl 5.6. The return object
           has default precision)
 
      ""  (Interpolates the value of the Math::MPFR object to a
