--- a/MPFR.pod
+++ b/MPFR.pod
@@ -1938,22 +1938,24 @@ Math::MPFR - perl interface to the MPFR (floating point) library.
     for the given $arg.
     $mask is initially set to zero.
     If $str assigns to $arg (as it should) then $mask set to 1.
-    Secondly, we chop the least significant digit off the mantissa of
-    $str and add 2 to $mask if this chopped $str assigns to a value
-    less than $arg.
-    Thirdly, we increment the least siginificant mantissa digit of this
-    chopped $str, and add 4 to $mask if this chopped-and-incremented
+    Also, we chop the least significant digit off the mantissa of
+    a copy of $str, and add 2 to $mask if this chopped $str assigns to
+    a value less than $arg.
+    Also, we increment the least siginificant mantissa digit of this
+    chopped copy of $str, and add 4 to $mask if this chopped-and-incremented
     $str assigns to a value greater than $arg.
-    $mask is then returned. If all is correct, it's value will be 7.
-    If the value of the returned $mask is not 7, then we can determine
-    which part(s) of the test has failed by examining $mask's three
+    Also, we check that the mantissa portion of $str contains no
+    unwelcome trailing zeroes.
+    $mask is then returned. If all is correct, it's value will be 15.
+    If the value of the returned $mask is not 15, then we can determine
+    which part(s) of the test has failed by examining $mask's four
     lowest bits.
 
     If a third (debug) arg is provided and is TRUE, then some debug
     info is provided during the runnng of nvtoa_test().
 
-    For inf, nan, and zero, we do only the initial test and return 7 if
-    that test has passed, or 0 if that test has failed. (The other 2
+    For inf, nan, and zero, we do only the initial test and return 15 if
+    that test has passed, or 0 if that test has failed. (The other 3
     tests don't really apply.)
 
 
